// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`remediation-patterns Renders \`remediation-patterns\` with empty modal 1`] = `
<form
  class="v-form"
  novalidate="novalidate"
>
  <div
    class="modal-wrapper"
    close="close"
  >
    <div
      class="title"
    >
      <span>
        Assign patterns
      </span>
    </div>
     
    <div
      class="text"
    >
      <c-patterns-field-stub
        alarm-attributes="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
        entity-attributes="[object Object]"
        value="[object Object]"
        with-alarm="with-alarm"
        with-entity="with-entity"
      />
      <c-collapse-panel-stub
        class="mt-3"
        title="Pbehavior types"
      >
        <remediation-patterns-pbehavior-types-form-stub
          form="[object Object]"
        />
      </c-collapse-panel-stub>
    </div>
     
    <div
      class="actions"
    >
      <button
        class="v-btn v-btn--flat theme--light"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          Cancel
        </div>
      </button>
      <button
        class="primary v-btn theme--light"
        type="submit"
      >
        <div
          class="v-btn__content"
        >
          Submit
        </div>
      </button>
    </div>
  </div>
</form>
`;

exports[`remediation-patterns Renders \`remediation-patterns\` with instruction 1`] = `
<form
  class="v-form"
  novalidate="novalidate"
>
  <div
    class="modal-wrapper"
    close="close"
  >
    <div
      class="title"
    >
      <span>
        Assign patterns
      </span>
    </div>
     
    <div
      class="text"
    >
      <c-patterns-field-stub
        alarm-attributes="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
        entity-attributes="[object Object]"
        value="[object Object]"
        with-alarm="with-alarm"
        with-entity="with-entity"
      />
      <c-collapse-panel-stub
        class="mt-3"
        title="Pbehavior types"
      >
        <remediation-patterns-pbehavior-types-form-stub
          form="[object Object]"
        />
      </c-collapse-panel-stub>
    </div>
     
    <div
      class="actions"
    >
      <button
        class="v-btn v-btn--flat theme--light"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          Cancel
        </div>
      </button>
      <button
        class="primary v-btn theme--light"
        type="submit"
      >
        <div
          class="v-btn__content"
        >
          Submit
        </div>
      </button>
    </div>
  </div>
</form>
`;

exports[`remediation-patterns Renders \`remediation-patterns\` with title 1`] = `
<form
  class="v-form"
  novalidate="novalidate"
>
  <div
    class="modal-wrapper"
    close="close"
  >
    <div
      class="title"
    >
      <span>
        Remediation patterns title
      </span>
    </div>
     
    <div
      class="text"
    >
      <c-patterns-field-stub
        alarm-attributes="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
        entity-attributes="[object Object]"
        value="[object Object]"
        with-alarm="with-alarm"
        with-entity="with-entity"
      />
      <c-collapse-panel-stub
        class="mt-3"
        title="Pbehavior types"
      >
        <remediation-patterns-pbehavior-types-form-stub
          form="[object Object]"
        />
      </c-collapse-panel-stub>
    </div>
     
    <div
      class="actions"
    >
      <button
        class="v-btn v-btn--flat theme--light"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          Cancel
        </div>
      </button>
      <button
        class="primary v-btn theme--light"
        type="submit"
      >
        <div
          class="v-btn__content"
        >
          Submit
        </div>
      </button>
    </div>
  </div>
</form>
`;
